--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,10 +27,14 @@ Imports:
     magrittr,
     leaflet.extras,
     tibble,
-    tidyr
+    tidyr,
+    fireData (>= 1.16),
+    countup (>= 0.1.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
-Remotes: 
+Remotes:  
     RinteRface/shinyMobile,
-    JohnCoene/sever
+    JohnCoene/sever,
+    paulsp94/fireData,
+    JohnCoene/countup
